sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

	val needSwap=true;
	for (i<- 0 to getNombreValeurs()-2)
	{
		if(needSwap==true)
		{
			needSwap=false;
			if( plusPetit(i+1,i))
			{
				echange(i,i+1);
				needSwap=true;
			}
		}
	}
	for (i<- getNombreValeurs()-2 to 0 by -1)
	{
		if(needSwap==true)
		{
			needSwap=false;
			if(plusPetit(i+1,i))
			{
				echange(i,i+1);
				needSwap=true;
			}
		}
	}
	
}

